--- a/Cplusplus/.vscode/tasks.json
+++ b/Cplusplus/.vscode/tasks.json
@@ -13,6 +13,10 @@
                 "-g",
                 "heap_sort.cpp"
             ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
             "problemMatcher": []
         }
     ]
