调整目录，添加二分查找

--- a/Cplusplus/.vscode/tasks.json
+++ b/Cplusplus/.vscode/tasks.json
@@ -11,7 +11,7 @@
                 "-o",
                 "./build_out/main.out",
                 "-g",
-                "quick_sort.cpp"
+                "binary_search.cpp"
             ],
             "group": {
                 "kind": "build",
