添加0-1背包问题

--- a/Cplusplus/.vscode/tasks.json
+++ b/Cplusplus/.vscode/tasks.json
@@ -11,7 +11,7 @@
                 "-o",
                 "./build_out/main.out",
                 "-g",
-                "./backtracking/8Queens.cpp"
+                "./backtracking/0-1knapsack.cpp"
             ],
             "group": {
                 "kind": "build",
