配置Windows编译环境

--- a/Cplusplus/.vscode/tasks.json
+++ b/Cplusplus/.vscode/tasks.json
@@ -18,6 +18,20 @@
                 "isDefault": true
             },
             "problemMatcher": []
-        }
+        },
+        {
+            "label": "msvc build",
+            "type": "shell",
+            "command": "cl.exe",
+            "args": ["/EHsc", "/Zi", "/Fe:", "./build_out/main.exe", "main.cpp"],
+            "group": {
+              "kind": "build",
+              "isDefault": true
+            },
+            "presentation": {
+              "reveal": "always"
+            },
+            "problemMatcher": "$msCompile"
+          }
     ]
 }
