--- a/Cplusplus/.vscode/settings.json
+++ b/Cplusplus/.vscode/settings.json
@@ -40,6 +40,7 @@
         "xtr1common": "cpp",
         "xutility": "cpp",
         "set": "cpp",
-        "xtree": "cpp"
+        "xtree": "cpp",
+        "map": "cpp"
     }
 }
